# audio_to_midi

./: README.md  audio2midi.py  monophonic_audio_to_midi.md  pyproject.toml  setup.cfg
audio_to_midi/: __init__.py  cli.py  monophonic.py
sound_to_midi/: __init__.py  cli.py
src/: audio2midi.py  cli.py
wav2midi/: __init__.py
