[project]
name = "sound_to_midi"
version = "0.0.3"
authors = [
  { name="Tiago Tavares", email="tiagoft@gmail.com" },
]
description = "Converts audio to midi."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tiagoft/audio_to_midi"

[project.scripts]
w2m = "sound_to_midi.cli:run"