[project]
name = "sound_to_midi"
version = "0.0.4"
authors = [
  { name="Tiago Tavares", email="tiagoft@gmail.com" },
]
description = "Converts audio to midi."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL3 License",
    "Operating System :: OS Independent",
]
dependencies = [
  'librosa >= 0.9.2',
  'midiutil',
  'numpy >= 1.20.3',
]

[project.urls]
"Homepage" = "https://github.com/tiagoft/audio_to_midi"

[project.scripts]
w2m = "sound_to_midi.cli:run"